--- a/3portfolio.ipynb
+++ b/3portfolio.ipynb
@@ -976,8 +976,8 @@
     }
    ],
    "source": [
+    "# Plot the steps and rewards from dataframes\n",
     "def plot_steps_and_rewards(rewards_df, steps_df):\n",
-    "    \"\"\"Plot the steps and rewards from dataframes.\"\"\"\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=2, figsize=(15, 5))\n",
     "    sns.lineplot(\n",
     "        data=rewards_df, x=\"Episodes\", y=\"cum_rewards\", hue=\"map_size\", ax=ax[0]\n",
