--- a/3portfolio.ipynb
+++ b/3portfolio.ipynb
@@ -85,12 +85,12 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: gymnasium in c:\\users\\trang\\anaconda3\\lib\\site-packages (0.28.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (4.7.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from gymnasium) (1.24.4)\n",
-      "Requirement already satisfied: farama-notifications>=0.0.1 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (0.0.4)\n",
-      "Requirement already satisfied: importlib-metadata>=4.8.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (6.8.0)\n",
-      "Requirement already satisfied: jax-jumpy>=1.0.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (1.0.0)\n",
       "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (1.6.0)\n",
+      "Requirement already satisfied: jax-jumpy>=1.0.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (1.0.0)\n",
+      "Requirement already satisfied: farama-notifications>=0.0.1 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (0.0.4)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from gymnasium) (1.24.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (4.7.1)\n",
+      "Requirement already satisfied: importlib-metadata>=4.8.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium) (6.8.0)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from importlib-metadata>=4.8.0->gymnasium) (3.16.0)\n"
      ]
     },
@@ -104,7 +104,7 @@
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: You are using pip version 21.1.2; however, version 23.1.2 is available.\n",
+      "WARNING: You are using pip version 21.1.2; however, version 23.2 is available.\n",
       "You should consider upgrading via the 'c:\\users\\trang\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
      ]
     },
@@ -112,15 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gymnasium[toy-text] in c:\\users\\trang\\anaconda3\\lib\\site-packages (0.28.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (4.7.1)\n",
-      "Requirement already satisfied: farama-notifications>=0.0.1 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (0.0.4)\n",
-      "Requirement already satisfied: jax-jumpy>=1.0.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (1.0.0)\n",
-      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (1.6.0)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from gymnasium[toy-text]) (1.24.4)\n",
-      "Requirement already satisfied: importlib-metadata>=4.8.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (6.8.0)\n",
-      "Requirement already satisfied: pygame==2.1.3 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (2.1.3)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from importlib-metadata>=4.8.0->gymnasium[toy-text]) (3.16.0)\n"
+      "Requirement already satisfied: gymnasium[toy-text] in c:\\users\\trang\\anaconda3\\lib\\site-packages (0.28.1)"
      ]
     },
     {
@@ -133,8 +125,23 @@
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -atplotlib (c:\\users\\trang\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: You are using pip version 21.1.2; however, version 23.1.2 is available.\n",
+      "WARNING: You are using pip version 21.1.2; however, version 23.2 is available.\n",
       "You should consider upgrading via the 'c:\\users\\trang\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: importlib-metadata>=4.8.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (6.8.0)\n",
+      "Requirement already satisfied: farama-notifications>=0.0.1 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (0.0.4)\n",
+      "Requirement already satisfied: cloudpickle>=1.2.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (1.6.0)\n",
+      "Requirement already satisfied: jax-jumpy>=1.0.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (1.0.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.3.0 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (4.7.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from gymnasium[toy-text]) (1.24.4)\n",
+      "Requirement already satisfied: pygame==2.1.3 in c:\\users\\trang\\anaconda3\\lib\\site-packages (from gymnasium[toy-text]) (2.1.3)\n",
+      "Requirement already satisfied: zipp>=0.5 in c:\\users\\trang\\appdata\\roaming\\python\\python38\\site-packages (from importlib-metadata>=4.8.0->gymnasium[toy-text]) (3.16.0)\n"
      ]
     }
    ],
@@ -202,8 +209,12 @@
     "# The FrozenLake environment\n",
     "env = gym.make(\n",
     "    \"FrozenLake-v1\",\n",
-    "    render_mode=\"human\" # allow for human interaction and visualization\n",
+    "    render_mode=\"human\", # allow for human interaction and visualization\n",
+    "    desc=generate_random_map(\n",
+    "        size=7\n",
+    "    )\n",
     ")\n",
+    "\n",
     "\n",
     "# Reset the environment to its initial state\n",
     "env.reset()\n",
@@ -219,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "Discrete(16)"
+       "Discrete(49)"
       ]
      },
      "execution_count": 4,
@@ -307,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "(5, 0.0, True, False, {'prob': 0.3333333333333333})"
+       "(8, 0.0, False, False, {'prob': 0.3333333333333333})"
       ]
      },
      "execution_count": 8,
@@ -350,7 +361,9 @@
     {
      "data": {
       "text/plain": [
-       "[(1.0, 5, 0, True)]"
+       "[(0.3333333333333333, 4, 0.0, True),\n",
+       " (0.3333333333333333, 12, 0.0, False),\n",
+       " (0.3333333333333333, 6, 0.0, False)]"
       ]
      },
      "execution_count": 10,
@@ -388,29 +401,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1 and action 2\n",
-      "Iteration 2 and action 3\n",
-      "Iteration 3 and action 2\n",
-      "Iteration 4 and action 0\n",
-      "Iteration 5 and action 3\n"
+      "Iteration 1 and action 0\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 6 and action 0\n",
-      "Iteration 7 and action 2\n",
-      "Iteration 8 and action 1\n",
+      "Iteration 2 and action 1\n",
+      "Iteration 3 and action 3\n",
+      "Iteration 4 and action 1\n",
+      "Iteration 5 and action 1\n",
+      "Iteration 6 and action 3\n",
+      "Iteration 7 and action 1\n",
+      "Iteration 8 and action 2\n",
       "Iteration 9 and action 3\n",
-      "Iteration 10 and action 1\n",
+      "Iteration 10 and action 0\n",
       "Iteration 11 and action 3\n",
-      "Iteration 12 and action 0\n",
-      "Iteration 13 and action 1\n",
-      "Iteration 14 and action 0\n",
-      "Iteration 15 and action 0\n",
-      "Iteration 16 and action 1\n",
-      "Iteration 17 and action 2\n"
+      "Iteration 12 and action 3\n",
+      "Iteration 13 and action 0\n",
+      "Iteration 14 and action 3\n",
+      "Iteration 15 and action 2\n",
+      "Iteration 16 and action 2\n",
+      "Iteration 17 and action 1\n"
      ]
     }
    ],
@@ -444,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
