--- a/3portfolio.ipynb
+++ b/3portfolio.ipynb
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./egreddy.PNG\">"
+    "<img src=\"./static/img/egreddy.PNG\">"
    ]
   },
   {
